feat: update index.html for improved SEO and branding
- Added meta description and Open Graph description for better search engine optimization and social media sharing.
- Changed the title from "Ember Amp Web" to "EMBER AMP" to enhance brand visibility.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <link rel="icon" type="image/png" href="/ember_app_icon.png" />
     <link rel="apple-touch-icon" href="/ember_app_icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ember Amp Web</title>
+    <meta name="description" content="Browser-based HiFi amplifier simulator with real-time DSP. Tube saturation, tone shaping, and compression — 100% local audio processing." />
+    <meta property="og:description" content="Browser-based HiFi amplifier simulator with real-time DSP. Tube saturation, tone shaping, and compression — 100% local audio processing." />
+    <title>EMBER AMP</title>
   </head>
   <body>
     <div id="root"></div>
