feat: integrate PWA support and enhance audio context management
- Added `vite-plugin-pwa` to enable Progressive Web App features, including a custom service worker and caching strategies for improved performance.
- Updated `index.html` to include a manifest link and an apple-touch-icon for better branding.
- Implemented a keep-alive mechanism in the `AudioEngine` to prevent audio context throttling during background operation.
- Modified `AmpRack` to start and stop the keep-alive oscillator, ensuring continuous audio processing even when the app is not in focus.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/ember_app_icon.png" />
-    <link rel="apple-touch-icon" href="/ember_app_icon.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Browser-based HiFi amplifier simulator with real-time DSP. Tube saturation, tone shaping, and compression — 100% local audio processing." />
+    <meta name="theme-color" content="#1a1a1a" />
+    <meta name="description" content="Browser-based HiFi amplifier simulator with real-time DSP. Tube saturation, tone shaping, and compression. 100% local audio processing." />
     <meta property="og:description" content="Browser-based HiFi amplifier simulator with real-time DSP. Tube saturation, tone shaping, and compression — 100% local audio processing." />
     <title>EMBER AMP</title>
   </head>
