refactor: update branding in index.html and manifest.json
- Changed the title in index.html from "EMBER AMP" to "EMBER" for a more concise brand representation.
- Updated the name in manifest.json from "Ember Amp" to "EMBER" to maintain consistency across the application.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#1a1a1a" />
     <meta name="description" content="Browser-based HiFi amplifier simulator with real-time DSP. Tube saturation, tone shaping, and compression. 100% local audio processing." />
     <meta property="og:description" content="Browser-based HiFi amplifier simulator with real-time DSP. Tube saturation, tone shaping, and compression — 100% local audio processing." />
-    <title>EMBER AMP</title>
+    <title>EMBER</title>
   </head>
   <body>
     <div id="root"></div>
