--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <meta name="theme-color" content="#1a1a1a" />
     <meta name="description" content="Browser-based HiFi amplifier simulator with real-time DSP. Tube saturation, tone shaping, and compression. 100% local audio processing." />
     <meta property="og:description" content="Browser-based HiFi amplifier simulator with real-time DSP. Tube saturation, tone shaping, and compression — 100% local audio processing." />
+    
+    <!-- Preload critical images for instant rendering -->
+    <link rel="preload" as="image" href="/ember_app_icon.png" />
+    <link rel="preload" as="image" href="/assets/Ampex_orange_transparent.gif" />
+    
     <title>EMBER</title>
   </head>
   <body>
