fix gif rendering

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta property="og:description" content="Browser-based HiFi amplifier simulator with real-time DSP. Tube saturation, tone shaping, and compression — 100% local audio processing." />
     
     <!-- Preload critical images for instant rendering -->
+    <!-- Note: Don't preload animated GIFs - can cause rendering issues -->
     <link rel="preload" as="image" href="/ember_app_icon.png" />
-    <link rel="preload" as="image" href="/assets/Ampex_orange_transparent.gif" />
     
     <title>EMBER</title>
   </head>
